# routes/index.js
@@ -3,11 +3,12 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    //#swagger.tags = ['Hello World']
+    //#swagger.ignore = true
     res.send('Hello World!');
 });
 
 router.use('/users', require('./users'));
+router.use('/cars', require('./cars'));
 
 module.exports = router;
 
